9: Fixes footer spacing
Fixes #6.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,10 @@
     border-top: 2px solid var(--second-bg-color);
 }
 
+#content {
+    margin-bottom: 3em;
+}
+
 #content h1 {
     text-align: center;
     margin-bottom: 1.25em;
@@ -16,6 +20,5 @@
     font-size: 0.85em;
     color: var(--second-fg-color);
     padding: 0.75em 1em;
-    margin: 0;
     background-color: var(--second-bg-color);
 }
